--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.30.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.18.2",
+    "jspdf": "^3.0.4",
     "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
